# ride_sharing_system

./: CMakeLists.txt  Pharo 12.0 - 64bit (stable).1.changes  README.md  output_cpp.txt  output_smalltalk.txt
include/: ridesystem.hpp
small_talk_code/: ShareRidingSystem.st  driver.st  premiumRide.st  ride.st  rideSystem.st  rider.st  standardRide.st  usage_example.st
src/: main.cpp  ridesystem.cpp
